sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:10: error: not enough arguments for method echange: (x$1: Int, x$2: Int)Unit.
Unspecified value parameter x$2.
    echange(l)
           ^