sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var l=0
while(!estTrie()) {
  var c=getCouleur(l)
  if (c==Color.blue) {
    echange(l,getTaille()-l)
  }
  if (c==Color.red) {
    echange(l)
  }
  l=l+1
}
}